modify _config.yml #site url

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Java Blog
-keywords: Java blog,Jekyll
+title: Micro Blog
+keywords: Micro blog,Jekyll
 ---
 {% for post in paginator.posts %}
     <div class="article">
